[package]
name = "timezonebot"
version = "0.2.0"
authors = ["Nogamara <armagonlive@gmail.com>"]
edition = "2018"

[lib]
name = "tzbot"
path = "src/tzbot.rs"

[[bin]]
name = "timezonebot"
path = "src/main.rs"

[dependencies]
hourglass = "0.8.0"
mastodon-async = { version = "1.3.0", features = ["toml", "mt"] }
regex = "1.9.5"
time = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
